[package]
name = "labelgraph"
version = "2.2.3"
authors = ["Oliver Funk <oliver.funk@thoughtexpress.com>"]

description = "A simple to use graph implementation, allowing random access to nodes via labels."
documentation = "https://docs.rs/labelgraph/"
repository = "https://github.com/oliverfunk/labelgraph"

license = "MIT/Apache-2.0"
keywords = ["graph", "search", "mapping"]
categories = ["data-structures", "algorithms"]
edition = "2018"

[badges]
travis-ci = { repository = "oliverfunk/labelgraph", branch = "master" }

[dependencies]
